Heirarchal Queries now work for H2, PostgreSQL, and SQLite.